--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -23,3 +23,7 @@ mybatis:
 logging:
   level:
     root: info
+app:
+  dir:
+    imgsdir: file:///C:/sm2025team4/imgs/     # 화면 출력 용
+    uploadimgsdir: C:/sm2025team4/imgs/    # 파일 Write 용
