--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -25,5 +25,5 @@ logging:
     root: info
 app:
   dir:
-    imgsdir: file:///C:/TEST/sm2025team4/imgs/     # 화면 출력 용
-    uploadimgsdir: C:/TEST/sm2025team4/imgs/    # 파일 Write 용
+    imgsdir: file:///C:/sm2025team4/imgs/     # 화면 출력 용
+    uploadimgsdir: C:/sm2025team4/imgs/    # 파일 Write 용
