--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -25,5 +25,6 @@ logging:
     root: info
 app:
   dir:
-    imgsdir: file:///C:/java/sm2025team4/imgs     # 화면 출력 용
-    uploadimgsdir: C:/java/sm2025team4/imgs   # 파일 Write 용
+    #SCY로컬에 경로
+    imgsdir: file:///C:/java/sm2025team4/imgs/     # 화면 출력 용
+    uploadimgsdir: C:/java/sm2025team4/imgs/   # 파일 Write 용
